--- a/NpcWork/NpcWork.csproj
+++ b/NpcWork/NpcWork.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>DatabaseSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Extensions\RichTextBoxExtensions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
